<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/home_id"-->
<!--        android:title="@string/home1"-->
<!--        android:icon="@drawable/home_logo"/>-->

    <item
        android:id="@+id/stocks_id"
        android:title="@string/stocks"
        android:icon="@drawable/stocks_watchlist_logo"/>

    <item
        android:id="@+id/logIncomeExpenses_id"
        android:title="@string/log_income_expenses"
        android:icon="@drawable/add_income_logo"/>
    <item
        android:id="@+id/news_id"
        android:title="@string/news_feed1"
        android:icon="@drawable/news_feed_logo" />
    <item
        android:id="@+id/remainder"
        android:title="@string/bill_payment_remainder"
        android:icon="@drawable/payment_remainder" />

</menu>