<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:id="@+id/it1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_logo"
            android:title="Home"
            tools:ignore="HardcodedText" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback_logo"
            android:title="@string/feedback"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share_logo"
            android:title="@string/share"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_logo"
            android:title="@string/about_us"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_logo"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>