<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity1"
    android:paddingTop="30dp">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        tool:cardElevation="0dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            style="@style/searchBackground"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            tool:defaultQueryHint="Search News..."
            tool:iconifiedByDefault="false">

        </androidx.appcompat.widget.SearchView>
    </androidx.cardview.widget.CardView>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_1"
                android:text="@string/business"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_marginRight="4dp"
                style="@style/buttonBackground">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_2"
                android:text="@string/entertainment"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_marginRight="4dp"
                style="@style/buttonBackground">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_3"
                android:text="@string/general"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_marginRight="4dp"
                style="@style/buttonBackground">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_4"
                android:text="@string/health"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_marginRight="4dp"
                style="@style/buttonBackground">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_5"
                android:text="@string/science"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_marginRight="4dp"
                style="@style/buttonBackground">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_6"
                android:text="@string/sports"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_marginRight="4dp"
                style="@style/buttonBackground">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_7"
                android:text="@string/technology"
                android:textSize="12sp"
                android:padding="6dp"
                style="@style/buttonBackground">
            </Button>

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="InvalidId">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>